# site_compliance

./: .gitignore  Dockerfile  LICENSE  README.md  audit.py  docker-compose.yml  example.env  pyproject.toml  requirements.txt
config/: compliance.example.yaml  config.example.yaml
deploy/apache/: vet-compliance.conf
deploy/nginx/: vet-compliance.conf
schemas/: compliance.schema.json
scripts/: install_web_proxy.sh
src/vet_compliance/: __init__.py  cache.py  cli.py  config.py  exceptions.py  models.py
src/vet_compliance/compliance/: engine.py
src/vet_compliance/connectors/: meraki.py  unifi.py
src/vet_compliance/reporting/: writers.py
src/vet_compliance/web/: app.py
tests/: test_engine.py  test_exceptions.py  test_meraki.py  test_reporting.py  test_unifi.py
unifi_radius_retransmit/: .env.windows-native.example  .gitignore  .sites.example.csv  Dockerfile  README.md  ansible.cfg  docker-compose.yml  requirements-windows-native.txt  requirements.txt
unifi_radius_retransmit/app/: inventory.py  run_once.py  scheduler.py  unifi_client.py  windows_native.py
unifi_radius_retransmit/config/: config.example.yaml  secrets.example.yaml  sites.example.csv
unifi_radius_retransmit/deploy/apache/: radius-grafana.conf
unifi_radius_retransmit/deploy/iis/: setup-radius-grafana-proxy.ps1
unifi_radius_retransmit/deploy/launchd/: com.example.radius.plist
unifi_radius_retransmit/playbooks/: radius_default_config.yml
unifi_radius_retransmit/prometheus/: prometheus.yml
unifi_radius_retransmit/scripts/: run-native.sh  run-once-native.sh
(+8 files in other folders)
